<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="center" android:paddingLeft="15dp" android:paddingRight="15dp">

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:singleLine="true" android:imeOptions="actionNext" android:inputType="textEmailAddress" android:hint="@string/email_hint">

    </EditText>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:singleLine="true" android:password="true" android:hint="@string/password_hint" android:imeOptions="actionSend"/>

    <LinearLayout
        android:id="@+id/signup_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" android:layout_weight="1"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>